fix: remove textarea scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -86,4 +86,5 @@ html, body, #root {
   border: 0;
   resize: none;
   outline: none;
+  overflow: hidden;
 }
